<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Games</string>
    <string name="title_activity_main">Games</string>

    <!-- Bottom Bar -->
    <string name="search">Search</string>
    <string name="collection">Collection</string>
    <string name="news">News</string>

    <!-- Search -->
    <string name="recent_searches">Recent searches</string>
    <string name="delete_searches">Delete all recent searches</string>

    <!-- Remove Search Dialog -->
    <string name="remove_search_title">Remove recent search?</string>
    <string name="remove_all_searches_title">Remove all recent search?</string>
    <string name="remove_search_positive">REMOVE</string>
    <string name="remove_search_negative" tools:ignore="ButtonCase">CANCEL</string>

    <!-- Company Detail -->
    <string name="developed_games">Developed (%d)</string>
    <string name="published_games">Published (%d)</string>
    <string name="company_logo_description">Company logo</string>
    <string name="back_description">Back icon</string>
    <string name="forward_developed_games_description">Go to developed games</string>
    <string name="forward_published_games_description">Go to published games</string>

    <!-- Game Detail -->
    <string name="logo_description">Logo</string>

    <string name="summary">Summary</string>

    <string name="screenshots">Screenshots</string>
    <string name="screenshot_description">Screenshot</string>

    <string name="details">Details</string>
    <string name="genres">Genres</string>
    <string name="themes">Themes</string>
    <string name="game_modes">Modes</string>
    <string name="player_perspectives">Player Perspectives</string>
    <string name="platforms">Platforms</string>

    <string name="involved_companies">Involved Companies</string>
    <string name="developer">Main Developer</string>
    <string name="supporter">Support Developer</string>
    <string name="publisher">Publisher</string>
    <string name="porter">Port Developer</string>

    <string name="similar_games">Similar Games</string>

    <string name="websites">Websites</string>
    <string name="website_logo_description">Website logo</string>
    <string name="official">Official</string>
    <string name="wikia">Wikia</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="twitch">Twitch</string>
    <string name="instagram">Instagram</string>
    <string name="youtube">YouTube</string>
    <string name="iphone">iPhone</string>
    <string name="ipad">iPad</string>
    <string name="android">Android</string>
    <string name="steam">Steam</string>
    <string name="reddit">Reddit</string>
    <string name="itch">ITCH</string>
    <string name="epic">Epic</string>
    <string name="gog">GOG</string>
    <string name="discord">Discord</string>

    <string name="expanded_image_description">Expanded image</string>

    <!-- User Game Dialog-->
    <string name="rate">Rate</string>

    <!-- Collection -->
    <string name="collection_logo">Collection logo</string>
    <string name="want">Want</string>
    <string name="playing">Playing</string>
    <string name="played">Played</string>
    <string name="games_size">%d games</string>

    <!-- Lists -->
    <string name="lists">Lists</string>
    <string name="list_games">%d games</string>
    <string name="add_list">Add List</string>
    <string name="new_list">New List</string>
    <string name="add_name">Add name…</string>
    <string name="add_description">Add description…</string>
    <string name="delete_list">Delete list</string>

    <!-- Add to list -->
    <string name="add_to_lists">Add to lists</string>
    <string name="list_selected_icon">List selected</string>
    <string name="list_blocked_icon">List blocked</string>

    <!-- Discard Dialog -->
    <string name="discard_title">Discard Changes</string>
    <string name="discard_message">Are you sure? Changes will be lost.</string>
    <string name="discard_positive">DISCARD</string>
    <string name="discard_negative" tools:ignore="ButtonCase">CANCEL</string>

    <!-- Remove List Dialog -->
    <string name="remove_list_title">Remove list?</string>
    <string name="remove_list_positive">REMOVE</string>
    <string name="remove_list_negative" tools:ignore="ButtonCase">CANCEL</string>

    <!-- Remove Game From List Dialog -->
    <string name="remove_game_from_list_title">Remove game from list?</string>
    <string name="remove_game_from_list_positive">REMOVE</string>
    <string name="remove_game_from_list_negative" tools:ignore="ButtonCase">CANCEL</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante.
    </string>

</resources>