<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        tools:context=".ui.detail.GameDetailActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogo"
                android:layout_width="75dp"
                android:layout_height="110dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/logo_description"
                    android:scaleType="fitXY"
                    tools:src="@drawable/game_logo_example" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvName"
                    style="@style/Title"
                    android:layout_marginBottom="5dp"
                    tools:text="Metal Gear Solid V: The Phantom Pain" />

                <TextView
                    android:id="@+id/tvDeveloper"
                    style="@style/Value"
                    tools:text="Kojima Productions" />

                <TextView
                    android:id="@+id/tvReleaseDate"
                    style="@style/Value"
                    tools:text="01 September 2015" />

            </LinearLayout>

        </LinearLayout>

        <View style="@style/DetailGameSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="@string/summary" />

            <TextView
                android:id="@+id/tvSummary"
                style="@style/Value"
                android:layout_marginTop="3dp"
                tools:text="Este es el resumen del juego" />

        </LinearLayout>

        <View style="@style/DetailGameSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="@string/screenshots" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <View style="@style/DetailGameSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="@string/details" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/genres" />

            <TextView
                android:id="@+id/tvGenres"
                style="@style/Value"
                tools:text="Adventure" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/themes" />

            <TextView
                android:id="@+id/tvThemes"
                style="@style/Value"
                tools:text="Action, Fantasy" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/game_modes" />

            <TextView
                android:id="@+id/tvGameModes"
                style="@style/Value"
                tools:text="Single player" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/player_perspectives" />

            <TextView
                android:id="@+id/tvPlayerPerspectives"
                style="@style/Value"
                tools:text="Third person" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/platforms" />

            <TextView
                android:id="@+id/tvPlatforms"
                style="@style/Value"
                tools:text="PC, PS3, PS4, X360, XONE" />

        </LinearLayout>

        <View style="@style/DetailGameSeparator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Title"
                android:text="@string/similar_games" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSimilarGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
