<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_app"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        tools:context=".ui.GameActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogo"
            android:layout_width="75dp"
            android:layout_height="110dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/logo_description"
                android:scaleType="fitXY"
                tools:src="@drawable/game_logo_example" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cvLogo"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvName"
                style="@style/Title"
                android:layout_marginBottom="5dp"
                tools:text="Metal Gear Solid V: The Phantom Pain" />

            <TextView
                android:id="@+id/tvDeveloper"
                style="@style/Value"
                tools:text="Kojima Productions" />

            <TextView
                android:id="@+id/tvReleaseDate"
                style="@style/Value"
                tools:text="01 September 2015" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvSummary"
            style="@style/Value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvLogo"
            tools:text="Este es el resumen del juego" />

        <LinearLayout
            android:id="@+id/llScreenshots"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSummary">

            <TextView
                style="@style/Title"
                android:text="@string/screenshots" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvScreenshots"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/llScreenshots">

            <TextView
                style="@style/Title"
                android:text="@string/details" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/genres" />

            <TextView
                android:id="@+id/tvGenres"
                style="@style/Value"
                tools:text="Adventure" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/themes" />

            <TextView
                android:id="@+id/tvThemes"
                style="@style/Value"
                tools:text="Action, Fantasy" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/game_modes" />

            <TextView
                android:id="@+id/tvGameModes"
                style="@style/Value"
                tools:text="Single player" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/player_perspectives" />

            <TextView
                android:id="@+id/tvPlayerPerspectives"
                style="@style/Value"
                tools:text="Third person" />

            <TextView
                style="@style/Subtitle"
                android:text="@string/platforms" />

            <TextView
                android:id="@+id/tvPlatforms"
                style="@style/Value"
                tools:text="PC, PS3, PS4, X360, XONE" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llDetails">

            <TextView
                style="@style/Title"
                android:text="@string/similar_games" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSimilarGames"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
