<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary"
    tools:context=".ui.game.GameDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/ivTopImage"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:background="@drawable/bg_company_logo_color"
                    android:contentDescription="@string/company_logo_description"
                    android:scaleType="fitXY" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fabBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/back_description"
                    android:src="@drawable/ic_back"
                    app:backgroundTint="@color/primary_transparent"
                    app:elevation="0dp"
                    app:fabSize="mini"
                    app:tint="@color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cvLogo"
                        android:layout_width="75dp"
                        android:layout_height="110dp"
                        app:cardCornerRadius="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/ivLogo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/logo_description"
                            android:scaleType="fitXY"
                            tools:src="@drawable/game_logo_example" />

                    </androidx.cardview.widget.CardView>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp">

                        <TextView
                            android:id="@+id/tvName"
                            style="@style/Title"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Metal Gear Solid V: The Phantom Pain" />

                        <TextView
                            android:id="@+id/tvReleaseDate"
                            style="@style/Value"
                            android:layout_marginTop="2dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvName"
                            tools:text="01 September 2015" />

                        <TextView
                            android:id="@+id/tvDeveloper"
                            style="@style/Value"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
                            tools:text="Kojima Productions" />

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cvRating"
                            android:layout_width="45dp"
                            android:layout_height="45dp"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginVertical="3dp"
                            app:cardCornerRadius="5dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:backgroundTint="@color/A_rating">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/tvRating"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/white"
                                    android:textSize="22sp"
                                    android:textStyle="bold"
                                    tools:text="9.6" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llWant"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivWant"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/want"
                            android:src="@drawable/ic_watch"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/tvWant"
                            style="@style/Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/want"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPlaying"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivPlaying"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/playing"
                            android:src="@drawable/ic_controller"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/tvPlaying"
                            style="@style/Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/playing"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llPlayed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ivPlayed"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:contentDescription="@string/played"
                            android:src="@drawable/ic_check"
                            app:tint="@color/white" />

                        <TextView
                            android:id="@+id/tvPlayed"
                            style="@style/Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/played"
                            android:textSize="13sp" />
                    </LinearLayout>

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:id="@+id/llSummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/summary" />

                    <TextView
                        android:id="@+id/tvSummary"
                        style="@style/Value"
                        android:layout_marginTop="3dp"
                        android:ellipsize="end"
                        android:maxLines="4"
                        tools:text="@string/lorem_ipsum" />

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/screenshots" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvScreenshots"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/details" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/genres" />

                    <TextView
                        android:id="@+id/tvGenres"
                        style="@style/Value"
                        tools:text="Adventure" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/themes" />

                    <TextView
                        android:id="@+id/tvThemes"
                        style="@style/Value"
                        tools:text="Action, Fantasy" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/game_modes" />

                    <TextView
                        android:id="@+id/tvGameModes"
                        style="@style/Value"
                        tools:text="Single player" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/player_perspectives" />

                    <TextView
                        android:id="@+id/tvPlayerPerspectives"
                        style="@style/Value"
                        tools:text="Third person" />

                    <TextView
                        style="@style/Subtitle"
                        android:text="@string/platforms" />

                    <TextView
                        android:id="@+id/tvPlatforms"
                        style="@style/Value"
                        tools:text="PC, PS3, PS4, X360, XONE" />

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/involved_companies" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvInvolvedCompanies"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/similar_games" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvSimilarGames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp" />

                </LinearLayout>

                <View style="@style/DetailGameSeparator" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/Title"
                        android:text="@string/websites" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvWebsites"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:indeterminateTint="@color/accent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
